[metadata]
name = wbec-hems-esven
version = 0.0.1
author = Sven Ebenfeld
author_email = sven.ebenfeld@gmail.com
description = A package to create a local HEMS for Heidelberg Energy Control Wallboxes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/esven/wbec-hems-python
project_urls =
    Bug Tracker = https://github.com/esven/wbec-hems-python/issues
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
